--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,9 @@ body {
     font-family: Whitney, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-img {
+/* img {
     max-width: 100%;
-}
+} */
 
 
 /* UTILITIES */
@@ -86,9 +86,14 @@ a {
 
 /* HEADER */
 .header-bar {
-    font-size: 20px;
+    font-size: 25px;
     background-color: #255EE9;
 
+}
+
+.header-ctn {
+    width: 85%;
+    max-width: 2000px;
 }
 
 /* Logo-side */
@@ -120,20 +125,41 @@ a {
 
 /* MAIN */
 
-/* FIRST SECTION */
-.first-section {
+/* HERO SECTION */
+.hero-section {
     /* debug */
     /* height: 600px; */
     /* background-color: #00008B; */
+    text-align: center;
     background-image: url(../img/jumbo.png);
     background-size: cover;
     background-repeat: no-repeat;
+    padding: 200px 0;
 }
 
-.first-box {
-    width: 1100px;
-    min-height: 600px;
+.hero-title {
+    font-size: 60px;
+    font-weight: bold;
+    padding-bottom: 60px;
+}
+
+.hero-box {
+    width: 80%;
+    /* min-height: 600px; */
+    flex-direction: column;
+    row-gap: 50px;
+    line-height: 40px;
     /* background-color: #EE82EE; */
+}
+
+.hero-btn {
+    align-items: center;
+    justify-content: center;
+    column-gap: 20px;
+}
+
+.hero-text {
+    padding-bottom: 30px;
 }
 
 /* SECOND SECTION */
@@ -147,12 +173,19 @@ a {
     background-size: contain; */
 }
 
-
 .right-box {
     flex-grow: 1;
     /* min-height: 600px; */
-    background-color: #FFC0CB;
+    /* background-color: #FFC0CB; */
 }
+.secnd-sec-box {
+}
+
+.secnd-sec-title {
+    color: black;
+    font-size: 50px;
+}
+
 
 /* FIFTH SECTION */
 .rectangle {
@@ -204,13 +237,20 @@ a {
 
 /* Bottoni */
 
-.wh-button {
+.white-btn {
     background-color: white;
-    padding: 10px;
+    padding: 10px 20px;
     border-radius: 30px;
     border: none;
     font-size: 1.2rem;
     color: black;
 }
 
-
+.black-btn {
+    background-color: black;
+    padding: 10px 20px;
+    border-radius: 30px;
+    border: none;
+    font-size: 1.2rem;
+    color: white;
+}
